--- a/deposit.html
+++ b/deposit.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
-<html lang="es" data-bs-theme="dark">
+<html lang="es">
+
 <head>
-<meta charset="UTF-8">
-<title>Depósito</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Depósito</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body class="container mt-5">
 
-<h3>Depósito</h3>
-<p>Saldo actual: $<span id="saldo"></span></p>
+  <h3>Depósito</h3>
+  <p>$<span id="saldoMenu"></span></p>
 
-<div id="alert-container"></div>
+  <div id="alert-container"></div>
 
-<form id="depositForm">
-  <input type="number" id="monto" class="form-control mb-2" placeholder="Monto" required>
-  <button class="btn btn-success">Depositar</button>
-</form>
+  <form id="depositForm">
+    <input type="number" id="monto" class="form-control mb-2" placeholder="Monto" required>
+    <button class="btn btn-success">Depositar</button>
+  </form>
 
-<p id="leyenda" class="mt-3"></p>
+  <p id="leyenda" class="mt-3"></p>
 
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-<script src="script.js"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="script.js"></script>
 </body>
+
 </html>
