--- a/login.html
+++ b/login.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="es" data-bs-theme="dark">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <title>Login</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <div class="container mt-5">
   <div class="card p-4">
-    <h3 class="text-center">Billetera Digital</h3>
+    <h3 class="text-center">Alke Wallet</h3>
 
     <div id="alert-container"></div>
 
