--- a/menu.html
+++ b/menu.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
-<html lang="es" data-bs-theme="dark">
+<html lang="es">
+
 <head>
-<meta charset="UTF-8">
-<title>Menú</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>Menú</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body class="container mt-5">
 
-<h3>Menú Principal</h3>
-<p>Saldo disponible: $<span id="saldoMenu"></span></p>
-<div id="mensaje" class="mb-3"></div>
+    <h3>Menú Principal</h3>
+    <p class="signoPeso">$<span id="saldoMenu"></span></p>
+    <div id="mensaje" class="mb-3"></div>
 
-<button id="depositar" class="btn btn-primary w-100 mb-2">Depositar</button>
-<button id="enviar" class="btn btn-primary w-100 mb-2">Enviar Dinero</button>
-<button id="movimientos" class="btn btn-success  w-100">Últimos Movimientos</button>
+    <button id="depositar" class="btn btn-primary w-100 mb-2">Depositar</button>
+    <button id="enviar" class="btn btn-primary w-100 mb-2">Enviar Dinero</button>
+    <button id="movimientos" class="btn btn-success  w-100">Últimos Movimientos</button>
 
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-<script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
