--- a/sendmoney.html
+++ b/sendmoney.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="es" data-bs-theme="dark">
+<html lang="es">
 <head>
 <meta charset="UTF-8">
 <title>Enviar Dinero</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<style>.selected{background:#585858}</style>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body class="container mt-4">
 
 <h3>Enviar Dinero</h3>
+<p>$<span id="saldoMenu"></span></p>
 
-<button id="nuevo" class="btn btn-secondary mb-2">Agregar nuevo contacto</button>
+<button id="nuevo" class="btn btn-primary mb-2">Agregar nuevo contacto</button>
 
 <form id="formContacto" class="mb-3" style="display:none;">
   <input class="form-control mb-1" id="nombre" placeholder="Nombre">
