--- a/transactions.html
+++ b/transactions.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="es" data-bs-theme="dark">
+<html lang="es">
 <head>
 <meta charset="UTF-8">
 <title>Movimientos</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body class="container mt-4">
 
 <h3>Últimos Movimientos</h3>
 
 <select id="filtro" class="form-select mb-2">
-  <option value="todos">Todos</option>
+  <option id="option" value="todos">Todos</option>
   <option value="deposito">Depósito</option>
   <option value="compra">Compra</option>
   <option value="transferencia">Transferencia</option>
