funcionando, falta agregar destinatario a ultimos movimientos

--- a/deposit.html
+++ b/deposit.html
@@ -11,7 +11,7 @@
 <body class="container mt-5">
 
   <h3>Depósito</h3>
-  <p>$<span id="saldoMenu"></span></p>
+  <p class="signoPeso">$<span id="saldo"></span></p>
 
   <div id="alert-container"></div>
 
