--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
 <body class="container mt-5">
 
     <h3>Menú Principal</h3>
-    <p class="signoPeso">$<span id="saldoMenu"></span></p>
+    <p class="signoPeso">$<span id="saldo"></span></p>
     <div id="mensaje" class="mb-3"></div>
 
     <button id="depositar" class="btn btn-primary w-100 mb-2">Depositar</button>
